Initial profile design

--- a/index.html
+++ b/index.html
@@ -2,9 +2,36 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>COOL HEADLINE HERE</title>
+    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <title>Northeastern students reflect on experiences, stigmas of dating apps - The Huntington News</title>
+    <link rel="icon" href="photos/HN-logo.svg">
   </head>
   <body>
-
+    <div class="container">
+      <div id="phoneContents">
+        <div id="background">
+          <img class="profileImg" src="photos/li.jpg" alt="">
+        </div>
+        <img id="phone" src="photos/phone-mockup.svg" alt="">
+        <div id="spacer"></div>
+        <div class="profileText">
+          <div class="profileHeader">
+            <h1 class="profileH1">Jovanne Li</h1>
+            <h2 class="profileH2">Third-year<br>Business administration and communication studies
+            </div>
+            <p class="profileGraf">As a romantic movie enthusiast, Jovanne Li, a third-year business administration and communication studies combined major, grew up wondering if she would be the main character of her own romantic movie. When Li entered the dating world in her first year of college, she quickly learned that it was not like the movies.</p>
+            <p class="profileGraf">Li downloaded Tinder in 2019 and set her expectations high. Ultimately, she fell for a man who did not reciprocate the same feelings. As difficult of a reality as this was for Li to face, many people go through the same in the dating world. She came out of the situation learning to better her communication skills and change her expectations.</p>
+            <p class="profileGraf">“Now, with the experiences that I’ve had, it’s made me understand better how to navigate the dating scene,” Li said. “It’s made me prioritize communication above anything else.”</p>
+            <p class="profileGraf">After her first setback, Li realized the importance of telling people exactly what she was looking for to avoid further instances of miscommunication with a partner. She makes sure to always “overshare.”</p>
+            <p class="profileGraf">“From now on, anytime I talk to someone, I’m always upfront about what they want and what I want,” Li said. “I make sure that we completely understand each other and what we’re getting into.”</p>
+            <p class="profileGraf">Li has been on Tinder for almost three years now. She learned that most people on the app are strictly looking for short flings and, as a previous victim of unfulfilled expectations, adapted to the mindset of her peers.</p>
+            <p class="profileGraf">“Now, with [Tinder], I’m going with the sense that it’s more of a ‘go with the flow’ situation,” Li said. “There’s never any pressure for it to turn into something long-lasting.”</p>
+            <p class="profileGraf">Although Li is a die-hard advocate for romantic movies, she does not believe in what a lot of movies preach: the “perfect person.”</p>
+            <p class="profileGraf">“Personally, I don’t believe in fate,” Li said. “I don’t believe that there’s only one right person for you. If we can have a lot of friends, then there’s no reason why there can’t be multiple people out there who are potentially good partners for you in a relationship.”</p>
+            <p class="profileGraf">Regardless of Li’s disbelief in fate, she does believe that everyone deserves to be treated like they are the main characters of romance movies — whether they expect it or not.</p>
+            <p class="profileGraf">“Don't settle for someone that's just OK,” Li said. “You should value yourself enough to know what you want and what you deserve.”</p>
+          </div>
+      </div>
+    </div>
   </body>
 </html>
