Profile Construction + style + photos

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="profileText">
           <div class="profileHeader">
             <h1 class="profileH1">Jovanne Li</h1>
-            <h2 class="profileH2">Third-year<br>Business administration and communication studies
+            <h2 class="profileH2">Third-year, business administration and communication studies
             </div>
             <p class="profileGraf">As a romantic movie enthusiast, Jovanne Li, a third-year business administration and communication studies combined major, grew up wondering if she would be the main character of her own romantic movie. When Li entered the dating world in her first year of college, she quickly learned that it was not like the movies.</p>
             <p class="profileGraf">Li downloaded Tinder in 2019 and set her expectations high. Ultimately, she fell for a man who did not reciprocate the same feelings. As difficult of a reality as this was for Li to face, many people go through the same in the dating world. She came out of the situation learning to better her communication skills and change her expectations.</p>
