--- a/index.html
+++ b/index.html
@@ -710,6 +710,12 @@
           <p class="profileGraf">“We as humans are just masters at creating tools to make our lives easier,” Wagner said. “[But] like most tools — it doesn’t work for everybody.”vAlthough Wagner likes dating apps less than she used to, she would defend those who use them any day. One of the biggest benefits of dating apps, she said, is the convenience of the large pool of candidates.</p>
           <p class="profileGraf">“There’s [so many] fish in the sea,” Wagner said. “If you want [a] fish, are you going to get [it] individually or use a net?”</p>`;
           profile = "wagner";
+        } else if (profile === "wagner"){
+          document.getElementById('intro3').style.display = "flex";
+          document.getElementById('backgroundSwatch').style.backgroundColor = "#7C28CE";
+          document.getElementById('profile').style.display = "none";
+          document.getElementById('backButton').style.display = "none";
+          document.getElementById('buttons').style.display = "none";
         };
       }
     </script>
