--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <img src="photos/arrow1.svg" id="arrow1" onmouseover="activate3()" onmouseout="deactivate3()" onmousedown="introshift1()" alt="A pink arrow pointing to the right with the word begin on it in white text.">
           </div>
           <div class="intro" id="intro2">
-            <h1>Northeastern students reflect on experiences, stigmas of dating apps</h1>
+            <h1>Northeastern students reflect on experiences, stigmas of dating apps<br><span id="introDate"><i>February 14, 2022</i></span></h1>
             <p class="introGraf">Dating apps are used by people of all backgrounds, but they’re commonly known to be a staple piece of the modern college culture.</p>
             <p class="introGraf">As first-time and veteran dating app users are coming together in the immersive world of dating, The News spoke with nine students about their experiences and thoughts on what it means to meet romantic partners through a phone screen when the COVID-19 pandemic shut down all social scenes for almost three years.</p>
             <img src="photos/arrow2.svg" id="arrow2" onmouseover="activate4()" onmouseout="deactivate4()" onmousedown="introshift2()"  alt="A pink arrow pointing to the right.">
