--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         <p class="profileGraf">Wagner has found dating to be difficult, especially on dating apps — not only because she is queer, but also because she is particular about the people she pursues. From her experiences on dating apps, Wagner learned to be forward about what she is looking for and what her boundaries are.</p>
         <p class="profileGraf">“In queer relationships, I think communication of wants and desires is so important and that intimacy for me is built by being in person,” Wagner said.</p>
         <p class="profileGraf">Even though Wagner believes that it’s easier to have genuine connections with people outside of dating apps, she does believe that dating apps are beneficial for those who do not go to parties often, like herself.</p>
-        <p class="profileGraf">“We as humans are just masters at creating tools to make our lives easier,” Wagner said. “[But] like most tools — it doesn’t work for everybody.”vAlthough Wagner likes dating apps less than she used to, she would defend those who use them any day. One of the biggest benefits of dating apps, she said, is the convenience of the large pool of candidates.</p>
+        <p class="profileGraf">“We as humans are just masters at creating tools to make our lives easier,” Wagner said. “[But] like most tools — it doesn’t work for everybody.” Although Wagner likes dating apps less than she used to, she would defend those who use them any day. One of the biggest benefits of dating apps, she said, is the convenience of the large pool of candidates.</p>
         <p class="profileGraf">“There’s [so many] fish in the sea,” Wagner said. “If you want [a] fish, are you going to get [it] individually or use a net?”</p>`;
         profile = "wagner";
       }
@@ -707,7 +707,7 @@
           <p class="profileGraf">Wagner has found dating to be difficult, especially on dating apps — not only because she is queer, but also because she is particular about the people she pursues. From her experiences on dating apps, Wagner learned to be forward about what she is looking for and what her boundaries are.</p>
           <p class="profileGraf">“In queer relationships, I think communication of wants and desires is so important and that intimacy for me is built by being in person,” Wagner said.</p>
           <p class="profileGraf">Even though Wagner believes that it’s easier to have genuine connections with people outside of dating apps, she does believe that dating apps are beneficial for those who do not go to parties often, like herself.</p>
-          <p class="profileGraf">“We as humans are just masters at creating tools to make our lives easier,” Wagner said. “[But] like most tools — it doesn’t work for everybody.”vAlthough Wagner likes dating apps less than she used to, she would defend those who use them any day. One of the biggest benefits of dating apps, she said, is the convenience of the large pool of candidates.</p>
+          <p class="profileGraf">“We as humans are just masters at creating tools to make our lives easier,” Wagner said. “[But] like most tools — it doesn’t work for everybody.” Although Wagner likes dating apps less than she used to, she would defend those who use them any day. One of the biggest benefits of dating apps, she said, is the convenience of the large pool of candidates.</p>
           <p class="profileGraf">“There’s [so many] fish in the sea,” Wagner said. “If you want [a] fish, are you going to get [it] individually or use a net?”</p>`;
           profile = "wagner";
         } else if (profile === "wagner"){
