Title redesign and design credit

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <img id="phone" src="photos/phone-mockup.svg" alt="A vector graphic of a smartphone in pinks and purples.">
           <img id="phoneDetail" src="photos/phone-detail.svg">
           <div class="intro" id="intro1">
-            <img src="photos/title.svg" id="title" alt="Bold white letters read Pack Match, bookended by pink hearts.">
+            <img src="photos/title3.svg" id="title" alt="Bold white letters read Pack Match, bookended by pink hearts.">
             <img src="photos/arrow1.svg" id="arrow1" onmouseover="activate3()" onmouseout="deactivate3()" onmousedown="introshift1()" alt="A pink arrow pointing to the right with the word begin on it in white text.">
           </div>
           <div class="intro" id="intro2">
@@ -51,6 +51,7 @@
               <p class="introGraf">"Dominic Imondi profile" by Haley Alphonse, news correspondent.<br><i>Photo courtesy Dominic Imondi.</i></p>
               <p class="introGraf">"Pankhuri Khare profile" by Cathy Ching, projects editor.<br><i>Photo courtesy Pankhuri Khare.</i></p>
               <p class="introGraf">"Smita Rosemary profile" by Haley Alphonse, news correspondent.<br><i>Photo courtesy Smita Rosemary.</i></p>
+              <p class="introGraf" id="designCredit">Web design by Avery Bleichfeld.</i></p>
             </div>
             <img src="photos/arrow4.svg" id="backButton2" onmouseover="activate7()" onmouseout="deactivate7()" onclick="conclBack()"alt="A pink arrow points left.">
           </div>
